# Shortwave

./: .deny.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .typos.toml  AGENTS.md  Cargo.toml  README.md  Shortwave.doap  cog.toml  meson.build  prek.toml  renovate.json  spacestation130.pls
.github/: renovate.json
.github/workflows/: actionlint.yml  ci.yml  flatpak.yml  release.yml
backlog/: config.yml
backlog/docs/: doc-2 - Dev-Build-Prozess-und-Script.md  doc-3 - PR-Branch-Workflow.md  doc-4 - Discovery-Script-Engine-Architecture.md  doc-5 - Discovery-Script-Engine-Architecture.md  doc-6 - CI-CD-Build-Process-GitHub-Actions-Workflows.md
backlog/drafts/: draft-1 - ui-für-extraktoren.md
backlog/tasks/: sw-1 - Playlist-Format-Support-PLS-M3U-mit-Fallback.md  sw-10 - SomaFM-Scraper-Provider-Script.md  sw-11 - Discovery-Sources-UI.md  sw-12 - Import-Results-Dialog.md  sw-13 - Radio-Browser-API-Provider-Script.md  sw-14 - CLI-Tool-shortwave-script.md  sw-15 - Custom-Provider-Management.md  sw-16 - Docs-und-Example-Scripts.md  sw-17 - System Tray Icon StatusNotifierItem + MPRIS Fix.md  sw-18 - Manual Recording Sessions.md  sw-19 - Gadget Mode PrevNext + Record Button.md  sw-2 - Test-Infrastruktur-einrichten.md  sw-20 - Favorite Pin Stations to Top.md  sw-21 - Network Connectivity Monitoring via Portal.md  sw-22 - AAC+ HE-AAC SBR Low Quality Fix.md  sw-23 - README-Original-author-credit-fork-rationale.md  sw-24 - GitHub-Actions-CI-workflow.md  sw-25 - Flatpak-build-repo-deployment.md  sw-26 - Cocogitto-config-release-workflow.md  sw-27 - Renovate-config.md  sw-28 - Prek-config.md  sw-29 - Actionlint-workflow.md  sw-3 - Multi-URL-Anzeige-plus-PLS-LogoURL.md  sw-30 - SHA-pin-verification-across-all-workflows.md  sw-31 - Playback-Codec-Quality-Preferences-SW-10.md  sw-32 - API-Backed-Search-in-Library-SW-32.md  sw-33 - CI-Fix-1-Fix-cocogitto-cog.toml-config-for-v7.md  sw-34 - CI-Fix-2-Create-prek.toml-config-exclude-backlog.md  sw-35 - CI-Fix-3-Switch-CI-container-to-gnome-master-image.md  sw-36 - CI-Fix-4-Fix-cargo-deny-config-for-licenses-and-advisories.md  sw-37 - CI-Fix-5-Upgrade-hickory-resolver-0.25-→-0.26.md  sw-38 - CI-Fix-6-Run-cargo-fmt-to-fix-Rust-formatting.md  sw-4 - PR: Playlist-Support-fuer-upstream.md  sw-5 - PR-Multi-URL-und-LogoURL-fuer-upstream.md  sw-6 - Discovery-Engine-Core-Rhai-Engine-und-Typen.md  sw-7 - HTML-Parsing-Functions-fuer-Rhai.md  sw-8 - Provider-Registry-und-Script-Runner.md  sw-9 - WebradioDB-Provider-Script.md
build-aux/: de.haeckerfelix.Shortwave.Devel.json  de.haeckerfelix.Shortwave.Local.json  de.haeckerfelix.Shortwave.json  pages-index.html
data/: de.haeckerfelix.Shortwave.gresource.xml.in  de.haeckerfelix.Shortwave.gschema.xml.in  de.haeckerfelix.Shortwave.metainfo.xml.in.in
data/database/: README.md
data/examples/: hello-world.rhai  radio-browser.rhai  somafm-simple.rhai  webradiodb.rhai
data/gtk/: add_station_dialog.ui  device_dialog.ui  device_indicator.ui  device_row.ui  discovery_results_dialog.ui  discovery_source_row.ui  library_page.ui  player_gadget.ui  player_toolbar.ui  player_view.ui  preferences_dialog.ui  recording_indicator.ui  search_filter.ui  search_page.ui  shortcuts_dialog.ui  station_cover.ui  station_dialog.ui  station_row.ui  style.css  track_dialog.ui  track_row.ui  volume_control.ui  window.ui
data/providers/: radiobrowser.rhai  somafm.rhai  webradiodb.rhai
docs/: discovery-scripts.md
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  el.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hu.po  ia.po  is.po  it.po  ka.po  kab.po  nb.po  oc.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
research/: accesskit-waydriver-analysis.md  fedora-version-compat.md
scripts/: verify-action-shas.sh
src/: app.rs  main.rs  utils.rs
src/api/: client.rs  cover_loader.rs  error.rs  http.rs  station.rs  station_metadata.rs  station_model.rs
src/audio/: gstreamer_backend.rs  mpris.rs  player.rs  track.rs
src/database/: connection.rs  library.rs
src/discovery/: engine.rs  mod.rs  provider.rs  registry.rs  runner.rs  types.rs
src/playlist/: fetch.rs  m3u.rs  mod.rs  pls.rs
src/ui/: about_dialog.rs  add_station_dialog.rs  device_dialog.rs  device_indicator.rs  device_row.rs  discovery_results_dialog.rs  discovery_source_row.rs  mod.rs  preferences_dialog.rs  recording_indicator.rs  window.rs  (+8 more)
tmp/: context-brief.md  dev-build.sh
tools/: dev-build.sh  dev-run.sh
(+16 files in other folders)
