[package]
name = "shortwave"
version = "0.0.0"
authors = [ "Felix Häcker <haeckerfelix@gnome.org>" ]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
ashpd = { version = "0.11", features = [ "gtk4", "async-std" ], default-features = false }
async-channel = "2.5"
async-compat = "0.2"
async-io = "2.5"
async-std-resolver = "0.24"
cacache = "13.1"
cast-sender = "0.2"
diesel = { version = "2.2", features = [ "sqlite", "r2d2" ] }
diesel_migrations = "2.2"
futures-util = "0.3"
indexmap = "2.10"
Inflector = "0.11"
language-tags = "0.3"
log = "0.4"
mdns-sd = "0.13"
mpris-server = "0.9"
pretty_env_logger = "0.5"
rand = "0.9"
regex = "1.11"
reqwest = "0.12"
sanitize-filename = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = "0.27"
strum_macros = "0.27"
sys-locale = "0.3"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.17", features = [ "v4" ] }
gettext-rs = { version = "0.7", features = [ "gettext-system" ] }

adw = { version = "0.7", package = "libadwaita", features = [ "v1_7" ] }
glycin = { version = "3.0.0-beta.1", features = [ "gdk4" ] }
gstreamer = { version = "0.23" }
gstreamer-audio = { version = "0.23" }
gtk = { version = "0.9", package = "gtk4", features = [ "gnome_46" ] }
shumate = { version = "0.6", package = "libshumate" }
